--- a/index2.html
+++ b/index2.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Vida no Campo</title>
-<style>
-body {
-background-color: pink;
-text-align: center;
-font-family: Arial;
-color: brown;
-}
-a {
-color: blue;
-font-weight: bold;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>azul2</title>
 </head>
 <body>
-<h2>Plantar e colher</h2>
-<h3>Contato com a natureza</h3>
-<a href="index.html">VOLTAR</a>
+    <h1>O que é reflorestamento e por que ele é importante para o meio ambiente?</h1>
+    <h1>Reflorestamento é o plantio de árvores em áreas onde a vegetação foi destruída. Ele é essencial para recuperar o solo, melhorar o ar, proteger a biodiversidade e combater as mudanças climáticas.
+</h1>
+    <div class="volte">
+    <a href="index.html">VOLTAR</a>
+</div>
 </body>
 </html>
