--- a/index4.html
+++ b/index4.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>AGRINHO</title>
+    <title>azul4</title>
 </head>
 <body>
-    <h1>Banoffe</h1>Add commentMore actions
-    <h1>Bolo de Brigadeiro</h1>
+    <h1>Como as árvores ajudam a evitar a erosão do solo?</h1>
+    <h1>As árvores absorvem gás carbônico (CO₂) e liberam oxigênio (O₂) por meio da fotossíntese. Elas também filtram poluentes, melhorando a qualidade do ar.</h1>
     <div class="volte">
     <a href="index.html">Voltar</a>
+</div>
 </body>
 </html>
