--- a/index.html
+++ b/index.html
@@ -1,39 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Agrinho 2025 - Cidade e Campo</title>
-<style>
-body {
-background-color: pink;
-text-align: center;
-font-family: Arial;
-}
-h1 {
-color: brown;
-}
-a {
-font-size: 20px;
-font-weight: bold;
-color: blue;
-display: block;
-margin: 10px;
-text-decoration: none;
-}
-img {
-width: 300px;
-margin-top: 20px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>azul</title>
 </head>
 <body>
-<h1>Agrinho 2025</h1>
-
-<a href="index2.html">VIDA NO CAMPO</a>
-<a href="index3.html">VIDA NA CIDADE</a>
-<a href="index4.html">ALIMENTAÇÃO NO CAMPO</a>
-<a href="index5.html">MEIO AMBIENTE</a>
-
-<img src="campo.jpg" alt="Imagem tema Cidade e Campo">
+    
+    <h2><a href="index2.html">Reflorestamento</a></h2>
+    <h2><a href="index3.html">Árvores e o Ar</h2>
+    <h2><a href="index4.html">Proteção do Solo</h2>
+    <h2><a href="index5.html">Preservação na Prática</a></h2>
+<img src="agrinho-2 (1).jpg" alt="imagem">
 </body>
 </html>
