--- a/index3.html
+++ b/index3.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>AGRINHO</title>
+    <title>azul3</title>
 </head>
 <body>
-     <h1>Lasanha</h1>Add commentMore actions
-    <h1>Risoto</h1>
+    <h1>Qual o papel das árvores na purificação do ar?</h1>
+    <h1>As árvores absorvem gás carbônico (CO₂) e liberam oxigênio (O₂) por meio da fotossíntese. Elas também filtram poluentes, melhorando a qualidade do ar.
+
+</h1>
     <div class="volte">
     <a href="index.html">Voltar</a>
+</div>
 </body>
 </html>
